# For_University_Faculty_Evaluation_1

./: .editorconfig  .gitignore  README.md  pyproject.toml
docs/: requirements.txt
src/sgg/: __init__.py  __init__.pyi  typing.py  version.py
src/sgg/_dialog/: __init__.py
src/sgg/_dialog/dialog/: directory.py  saveas.py
src/sgg/_dialog/maindialog/: __init__.py  __init__.pyi  _show.py  dialog.py
src/sgg/_dialog/popups/: __init__.py
src/sgg/dev/: __init__.py  _darray.py  _dnumber.py
src/sgg/dev/color/: __init__.py  color.csv
src/sgg/dialogs/dialog/: __init__.py  __init__.pyi  chooser.py  open.py
src/sgg/dialogs/maindialog/: __init__.py  __init__.pyi  _dialog.py  message.py
src/sgg/font/: __init__.py  __init__.pyi
src/sgg/graph/: __init__.py  typing.py
src/sgg/graph/element/: __init__.py
src/sgg/graph/graph/: __init__.py
src/sgg/graph/style/: __init__.py
src/sgg/nparray/: __init__.py
src/sgg/nparray/array/: __init__.py
src/sgg/nparray/dtype/: __init__.py
src/sgg/nparray/isdtype/: __init__.py  __init__.pyi
src/sgg/nparray/npArray/: __init__.pyi
src/sgg/nparray/npColor/: __init__.py  __init__.pyi  _color_check.py  color.csv  data.py
src/sgg/nparray/npDate/: __init__.py  datetime_format.py  formatconversion.py  formatconversion.pyi  npdate.py  npdate.pyi
src/sgg/nparray/npNumber/: __init__.py  __init__.pyi
src/sgg/nparray/npStatistics/: __init__.py  npStatisticsd.py  npStatisticsd.pyi  npStatisticsds.py  (+1 more)
src/sgg/readfile/: __init__.py
src/sgg/widget/: __init__.py
src/test/: _import.py  test_all.py
src/test/data/: index.html
(+295 files in other folders)
