[build-system]
requires=['setuptools>=45','wheel']
build-backend='setuptools.build_meta'
[project]
name='For_University_Faculty_Evaluation_1'
version='0.0.0'
description='評価用'
authors=[{name='asaihinata'}]
readme='README.md'
requires-python='>=3.14.6'
[project.optional-dependencies]
dev=['pytest>=7.0','black>=26.5.1','flake8>=4.0',]
[tool.isort]
line_length=88
skip=['tests']
skip_glob=['*/_import.py']
multi_line_output=0
include_trailing_comma=false
force_single_line=false
combine_as_imports=true
force_sort_within_sections=true
[tool.black]
line-length = 88
target-version = ['py314']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.git
  )/
  | _import.py
)
'''